<resources>
    <string name="app_name">Libord</string>
    <string name="Libord">Libord</string>
    <string name="add_word">Add Word</string>
    <string name="pick_random_word">Show Random Word</string>
    <string name="add_new_word">Add New Word</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="word">Word</string>
    <string name="Lib_export">Export</string>
    <string name="delete_all_in_category">Clear Category</string>
    <string name="Lib_import">Import</string>
    <string name="next">Next</string>
    <string name="no_word_in_library">No Word in library</string>
    <string name="edit_word">Edit Word</string>
    <string name="plural">Plural</string>
    <string name="entryType_Noun">noun</string>
    <string name="entryType_verb">verb</string>
    <string name="entryType_adjective">adjective</string>
    <string name="entryType_phrase">phrase</string>
    <string name="entryType_none">none</string>
</resources>